Figured Bass: added style param. to "Style | General" dlg box and font config. file

--- a/mscore/mscore/editstyle.ui
+++ b/mscore/mscore/editstyle.ui
@@ -112,6 +112,11 @@
      </item>
      <item>
       <property name="text">
+       <string>Figured Bass</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>Articulations, Ornaments</string>
       </property>
      </item>
@@ -147,7 +152,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="pageStack">
      <property name="currentIndex">
-      <number>12</number>
+      <number>14</number>
      </property>
      <widget class="QWidget" name="Seite1">
       <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -3523,6 +3528,214 @@ p, li { white-space: pre-wrap; }
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="FiguredBass">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QGroupBox" name="groupBox_20">
+         <property name="title">
+          <string>Figured Bass</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_32" stretch="0,1,0,2">
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_5">
+            <item>
+             <layout class="QFormLayout" name="formLayout_8">
+              <property name="fieldGrowthPolicy">
+               <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+              </property>
+              <item row="0" column="0">
+               <widget class="QLabel" name="labelFBFont">
+                <property name="text">
+                 <string>Font:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QComboBox" name="comboFBFont">
+                <property name="sizeAdjustPolicy">
+                 <enum>QComboBox::AdjustToContents</enum>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="labelFBSize">
+                <property name="text">
+                 <string>Size:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QDoubleSpinBox" name="doubleSpinFBSize">
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="suffix">
+                 <string>pt</string>
+                </property>
+                <property name="decimals">
+                 <number>1</number>
+                </property>
+                <property name="minimum">
+                 <double>5.000000000000000</double>
+                </property>
+                <property name="value">
+                 <double>9.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="labelFBVertPos">
+                <property name="text">
+                 <string>Vertical position:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QDoubleSpinBox" name="doubleSpinFBVertPos">
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="suffix">
+                 <string>sp</string>
+                </property>
+                <property name="minimum">
+                 <double>-25.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>25.000000000000000</double>
+                </property>
+                <property name="singleStep">
+                 <double>0.500000000000000</double>
+                </property>
+                <property name="value">
+                 <double>6.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="labelFBLineHeight">
+                <property name="text">
+                 <string>Line height:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QSpinBox" name="spinFBLineHeight">
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="suffix">
+                 <string>%</string>
+                </property>
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>500</number>
+                </property>
+                <property name="singleStep">
+                 <number>10</number>
+                </property>
+                <property name="value">
+                 <number>100</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_9">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_17">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="groupFBStyle">
+            <property name="title">
+             <string>Style</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_33">
+             <item>
+              <widget class="QRadioButton" name="radioFBModern">
+               <property name="text">
+                <string>Modern</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="radioFBHistoric">
+               <property name="text">
+                <string>Historic</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_16">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
      <widget class="QWidget" name="Seite15">
       <layout class="QVBoxLayout" name="verticalLayout_24">
        <property name="spacing">
@@ -3802,6 +4015,158 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>pageList</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>musicalSymbolFont</tabstop>
+  <tabstop>concertPitch</tabstop>
+  <tabstop>multiMeasureRests</tabstop>
+  <tabstop>minEmptyMeasures</tabstop>
+  <tabstop>minMeasureWidth</tabstop>
+  <tabstop>hideEmptyStaves</tabstop>
+  <tabstop>dontHideStavesInFirstSystem</tabstop>
+  <tabstop>staffUpperBorder</tabstop>
+  <tabstop>staffLowerBorder</tabstop>
+  <tabstop>staffDistance</tabstop>
+  <tabstop>akkoladeDistance</tabstop>
+  <tabstop>systemDistance</tabstop>
+  <tabstop>lyricsDistance</tabstop>
+  <tabstop>lyricsMinBottomDistance</tabstop>
+  <tabstop>lyricsLineHeight</tabstop>
+  <tabstop>systemFrameDistance</tabstop>
+  <tabstop>frameSystemDistance</tabstop>
+  <tabstop>pageFillThreshold</tabstop>
+  <tabstop>lastSystemFillThreshold</tabstop>
+  <tabstop>genClef</tabstop>
+  <tabstop>genTimesig</tabstop>
+  <tabstop>genKeysig</tabstop>
+  <tabstop>genCourtesyClef</tabstop>
+  <tabstop>genCourtesyTimesig</tabstop>
+  <tabstop>genCourtesyKeysig</tabstop>
+  <tabstop>showHeader</tabstop>
+  <tabstop>showHeaderFirstPage</tabstop>
+  <tabstop>headerOddEven</tabstop>
+  <tabstop>headerStyled</tabstop>
+  <tabstop>evenHeaderL</tabstop>
+  <tabstop>editEvenHeaderL</tabstop>
+  <tabstop>evenHeaderC</tabstop>
+  <tabstop>editEvenHeaderC</tabstop>
+  <tabstop>evenHeaderR</tabstop>
+  <tabstop>editEvenHeaderR</tabstop>
+  <tabstop>oddHeaderL</tabstop>
+  <tabstop>editOddHeaderL</tabstop>
+  <tabstop>oddHeaderC</tabstop>
+  <tabstop>editOddHeaderC</tabstop>
+  <tabstop>oddHeaderR</tabstop>
+  <tabstop>editOddHeaderR</tabstop>
+  <tabstop>showFooter</tabstop>
+  <tabstop>showFooterFirstPage</tabstop>
+  <tabstop>footerOddEven</tabstop>
+  <tabstop>footerStyled</tabstop>
+  <tabstop>evenFooterL</tabstop>
+  <tabstop>editEvenFooterL</tabstop>
+  <tabstop>evenFooterC</tabstop>
+  <tabstop>editEvenFooterC</tabstop>
+  <tabstop>evenFooterR</tabstop>
+  <tabstop>editEvenFooterR</tabstop>
+  <tabstop>oddFooterL</tabstop>
+  <tabstop>editOddFooterL</tabstop>
+  <tabstop>oddFooterC</tabstop>
+  <tabstop>editOddFooterC</tabstop>
+  <tabstop>oddFooterR</tabstop>
+  <tabstop>editOddFooterR</tabstop>
+  <tabstop>showMeasureNumber</tabstop>
+  <tabstop>showFirstMeasureNumber</tabstop>
+  <tabstop>showEverySystemMeasureNumber</tabstop>
+  <tabstop>showIntervalMeasureNumber</tabstop>
+  <tabstop>showAllStaffsMeasureNumber</tabstop>
+  <tabstop>intervalMeasureNumber</tabstop>
+  <tabstop>bracketWidth</tabstop>
+  <tabstop>bracketDistance</tabstop>
+  <tabstop>akkoladeWidth</tabstop>
+  <tabstop>akkoladeBarDistance</tabstop>
+  <tabstop>fixNumberMeasures</tabstop>
+  <tabstop>fixMeasureWidth</tabstop>
+  <tabstop>minMeasureWidth_2</tabstop>
+  <tabstop>measureSpacing</tabstop>
+  <tabstop>barNoteDistance</tabstop>
+  <tabstop>noteBarDistance</tabstop>
+  <tabstop>minNoteDistance</tabstop>
+  <tabstop>clefLeftMargin</tabstop>
+  <tabstop>keysigLeftMargin</tabstop>
+  <tabstop>timesigLeftMargin</tabstop>
+  <tabstop>clefKeyRightMargin</tabstop>
+  <tabstop>clefBarlineDistance</tabstop>
+  <tabstop>beginRepeatLeftMargin</tabstop>
+  <tabstop>staffLineWidth</tabstop>
+  <tabstop>showRepeatBarTips</tabstop>
+  <tabstop>showStartBarlineSingle</tabstop>
+  <tabstop>showStartBarlineMultiple</tabstop>
+  <tabstop>barWidth</tabstop>
+  <tabstop>endBarWidth</tabstop>
+  <tabstop>endBarDistance</tabstop>
+  <tabstop>doubleBarWidth</tabstop>
+  <tabstop>doubleBarDistance</tabstop>
+  <tabstop>shortenStem</tabstop>
+  <tabstop>shortStemProgression</tabstop>
+  <tabstop>shortestStem</tabstop>
+  <tabstop>accidentalNoteDistance</tabstop>
+  <tabstop>accidentalDistance</tabstop>
+  <tabstop>noteDotDistance</tabstop>
+  <tabstop>dotDotDistance</tabstop>
+  <tabstop>ledgerLineWidth</tabstop>
+  <tabstop>ledgerLineLength</tabstop>
+  <tabstop>clefTab1</tabstop>
+  <tabstop>clefTab2</tabstop>
+  <tabstop>arpeggioNoteDistance</tabstop>
+  <tabstop>arpeggioLineWidth</tabstop>
+  <tabstop>arpeggioHookLen</tabstop>
+  <tabstop>beamWidth</tabstop>
+  <tabstop>beamDistance</tabstop>
+  <tabstop>beamMinLen</tabstop>
+  <tabstop>beamMinSlope</tabstop>
+  <tabstop>beamMaxSlope</tabstop>
+  <tabstop>slurEndLineWidth</tabstop>
+  <tabstop>slurMidLineWidth</tabstop>
+  <tabstop>slurBow</tabstop>
+  <tabstop>slurDottedLineWidth</tabstop>
+  <tabstop>smallStaffSize</tabstop>
+  <tabstop>smallNoteSize</tabstop>
+  <tabstop>graceNoteSize</tabstop>
+  <tabstop>smallClefSize</tabstop>
+  <tabstop>hairpinY</tabstop>
+  <tabstop>hairpinLineWidth</tabstop>
+  <tabstop>hairpinHeight</tabstop>
+  <tabstop>hairpinContinueHeight</tabstop>
+  <tabstop>voltaY</tabstop>
+  <tabstop>voltaHook</tabstop>
+  <tabstop>voltaLineWidth</tabstop>
+  <tabstop>ottavaY</tabstop>
+  <tabstop>ottavaHook</tabstop>
+  <tabstop>ottavaLineWidth</tabstop>
+  <tabstop>useGermanNoteNames</tabstop>
+  <tabstop>chordDescriptionFile</tabstop>
+  <tabstop>chordDescriptionFileButton</tabstop>
+  <tabstop>comboFBFont</tabstop>
+  <tabstop>doubleSpinFBSize</tabstop>
+  <tabstop>doubleSpinFBVertPos</tabstop>
+  <tabstop>spinFBLineHeight</tabstop>
+  <tabstop>radioFBModern</tabstop>
+  <tabstop>radioFBHistoric</tabstop>
+  <tabstop>propertyDistanceHead</tabstop>
+  <tabstop>propertyDistanceStem</tabstop>
+  <tabstop>propertyDistance</tabstop>
+  <tabstop>articulationTable</tabstop>
+  <tabstop>tableWidget</tabstop>
+  <tabstop>voice1Up</tabstop>
+  <tabstop>voice1Down</tabstop>
+  <tabstop>voice2Up</tabstop>
+  <tabstop>voice2Down</tabstop>
+  <tabstop>voice3Up</tabstop>
+  <tabstop>voice3Down</tabstop>
+  <tabstop>voice4Up</tabstop>
+  <tabstop>voice4Down</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
