--- a/mscore/mscore/instrwizard.ui
+++ b/mscore/mscore/instrwizard.ui
@@ -155,7 +155,7 @@
      <item>
       <widget class="QPushButton" name="linkedButton">
        <property name="text">
-        <string>Add linked Staff</string>
+        <string>Add Linked Staff</string>
        </property>
       </widget>
      </item>
