--- a/mscore/share/templates/instruments.xml
+++ b/mscore/share/templates/instruments.xml
@@ -3994,6 +3994,23 @@
            </channel>
         </instrument>
      <instrument>
+        <name>Ukulele (tablature)</name>
+        <short-name>Uk.</short-name>
+        <clef>0</clef>
+        <aPitchRange>60-81</aPitchRange>
+        <pPitchRange>60-81</pPitchRange>
+        <Tablature>
+          <frets>18</frets>
+          <string>67</string>
+          <string>60</string>
+          <string>64</string>
+          <string>69</string>
+          </Tablature>
+        <channel>
+           <program>24</program>
+           </channel>
+        </instrument>
+     <instrument>
         <name>Baritone Ukulele</name>
         <short-name>Bar. Uk.</short-name>
         <clef>0</clef>
