--- a/trunk/mscore/mscore/inspector_beam.ui
+++ b/trunk/mscore/mscore/inspector_beam.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>287</width>
-    <height>148</height>
+    <height>155</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,36 +45,40 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="0">
+     <item row="4" column="1">
+      <widget class="QDoubleSpinBox" name="y1">
+       <property name="suffix">
+        <string>sp</string>
+       </property>
+       <property name="decimals">
+        <number>2</number>
+       </property>
+       <property name="minimum">
+        <double>-99.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>99.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.250000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Position</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Grow Left</string>
+        <string>Grow Right</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QToolButton" name="resetDistribute">
-       <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QToolButton" name="resetDirection">
-       <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
+     <item row="1" column="1" colspan="2">
       <widget class="QComboBox" name="direction">
        <item>
         <property name="text">
@@ -93,6 +97,24 @@
        </item>
       </widget>
      </item>
+     <item row="4" column="3">
+      <widget class="QToolButton" name="resetPosition">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Grow Left</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -107,28 +129,45 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_3">
+     <item row="0" column="3">
+      <widget class="QToolButton" name="resetDistribute">
        <property name="text">
-        <string>Grow Right</string>
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QDoubleSpinBox" name="growLeft">
-       <property name="value">
-        <double>1.000000000000000</double>
+     <item row="1" column="3">
+      <widget class="QToolButton" name="resetDirection">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QDoubleSpinBox" name="growRight">
-       <property name="value">
-        <double>1.000000000000000</double>
+     <item row="4" column="2">
+      <widget class="QDoubleSpinBox" name="y2">
+       <property name="suffix">
+        <string>sp</string>
+       </property>
+       <property name="minimum">
+        <double>-99.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>99.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.250000000000000</double>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="2" column="3">
       <widget class="QToolButton" name="resetGrowLeft">
        <property name="text">
         <string>...</string>
@@ -139,7 +178,21 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="2">
+     <item row="2" column="1" colspan="2">
+      <widget class="QDoubleSpinBox" name="growLeft">
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <widget class="QDoubleSpinBox" name="growRight">
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="3">
       <widget class="QToolButton" name="resetGrowRight">
        <property name="text">
         <string>...</string>
