--- a/mscore/mscore/shortcutcapturedialog.ui
+++ b/mscore/mscore/shortcutcapturedialog.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ShortcutCaptureDialogBase</class>
- <widget class="QDialog" name="ShortcutCaptureDialogBase" >
-  <property name="geometry" >
+ <widget class="QDialog" name="ShortcutCaptureDialogBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,85 +10,85 @@
     <height>214</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Enter shortcut sequence</string>
   </property>
-  <property name="modal" >
+  <property name="modal">
    <bool>true</bool>
   </property>
-  <layout class="QGridLayout" >
-   <property name="margin" >
+  <layout class="QGridLayout">
+   <property name="margin">
     <number>9</number>
    </property>
-   <property name="spacing" >
+   <property name="spacing">
     <number>6</number>
    </property>
-   <item row="0" column="0" colspan="2" >
-    <widget class="QLabel" name="descrLabel" >
-     <property name="text" >
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="descrLabel">
+     <property name="text">
       <string>Press up to 4 keys to enter shortcut sequence!</string>
      </property>
-     <property name="alignment" >
+     <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2" >
-    <widget class="QLabel" name="messageLabel" >
-     <property name="text" >
+   <item row="1" column="0" colspan="2">
+    <widget class="QLabel" name="messageLabel">
+     <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" >
-    <widget class="QLabel" name="oshrtTextLabel" >
-     <property name="text" >
-      <string>Old shortcut:</string>
+   <item row="2" column="0">
+    <widget class="QLabel" name="oshrtTextLabel">
+     <property name="text">
+      <string>Old shortcuts:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" >
-    <widget class="QLineEdit" name="oshrtLabel" >
-     <property name="readOnly" >
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="oshrtLabel">
+     <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
-    <widget class="QLabel" name="nshrtTextLabel" >
-     <property name="text" >
+   <item row="3" column="0">
+    <widget class="QLabel" name="nshrtTextLabel">
+     <property name="text">
       <string>New shortcut:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1" >
-    <widget class="QLineEdit" name="nshrtLabel" >
-     <property name="readOnly" >
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="nshrtLabel">
+     <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2" >
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+   <item row="4" column="0" colspan="2">
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QToolButton" name="clearButton" >
-       <property name="text" >
+      <widget class="QToolButton" name="clearButton">
+       <property name="text">
         <string>Clear</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -96,24 +97,31 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="enabled" >
+      <widget class="QPushButton" name="addButton">
+       <property name="text">
+        <string>Add</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="replaceButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="text" >
-        <string>OK</string>
+       <property name="text">
+        <string>Replace</string>
        </property>
-       <property name="shortcut" >
+       <property name="shortcut">
         <string/>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
         <string>Cancel</string>
        </property>
-       <property name="shortcut" >
+       <property name="shortcut">
         <string/>
        </property>
       </widget>
@@ -122,37 +130,21 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections>
-  <connection>
-   <sender>okButton</sender>
-   <signal>clicked()</signal>
-   <receiver>ShortcutCaptureDialogBase</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>337</x>
-     <y>189</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>242</x>
-     <y>194</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>cancelButton</sender>
    <signal>clicked()</signal>
    <receiver>ShortcutCaptureDialogBase</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>425</x>
      <y>194</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>350</x>
      <y>153</y>
     </hint>
