--- a/mscore/mscore/layer.ui
+++ b/mscore/mscore/layer.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MuseScore: Layer</string>
+   <string>MuseScore: Layers</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
