remove header in change instrument dialog

--- a/branches/mscore-0-9-6/mscore/mscore/selectinstr.ui
+++ b/branches/mscore-0-9-6/mscore/mscore/selectinstr.ui
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTreeWidget" name="instrumentList">
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>  
      <column>
       <property name="text">
        <string>0</string>
